--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -14,7 +14,7 @@ $specific_css = [
     <main class="main">
         <section class="intro">
             <div class="text-intro">
-                <h2>Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne">en ligne</span></br></h2>
+                <h2>Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne">en ligne</span><br></h2>
                 <h3>La plateforme de référence du Kr[HACK]en (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage, de débutant à expert.</h3>
             </div>
             <div class="image-intro">
@@ -32,7 +32,7 @@ $specific_css = [
                                 <h4>Leçons</h4>
                             </div>
                             <div class="box-info">
-                                <p>Découvrez les fondamentaux de la cyber et maîtrisez les concepts clés avec une approche structurée et complète.</p>
+                                <p>Découvrez les fondamentaux de la cybersécurité et maîtrisez les concepts clés avec une approche structurée et complète.</p>
                                 <ul>
                                     <li><i class="far fa-check-square checkbox-icon"></i>Théorie solide</li>
                                     <li><i class="far fa-check-square checkbox-icon"></i>Apprentissage progressif</li>
@@ -50,7 +50,7 @@ $specific_css = [
                                 <h4>Challenges</h4>
                             </div>
                             <div class="box-info">
-                                <p>Testez vos competences en resolvant des challenges de type CTF (Capture The Flag) dans divers domaines.</p>
+                                <p>Testez vos compétences en résolvant des challenges de type CTF (Capture The Flag) dans divers domaines.</p>
                                 <ul>
                                     <li><i class="far fa-check-square checkbox-icon"></i>Mise en pratique</li>
                                     <li><i class="far fa-check-square checkbox-icon"></i>Développement de compétences</li>
@@ -82,15 +82,15 @@ $specific_css = [
         </section>
         <section class="news">
             <div class="news-header">
-                <h2>Nouveautés et Évènements</h2>
+                <h2>Nouveautés et Événements</h2>
                 <a href="#" class="news-card featured">
-                    <img src="/images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
+                    <img src="/images/tmp4.jpg" alt="Affiche de l'événement Session 0" onerror="this.style.display='none';">
                     <div class="card-content">
                         <div class="card-top-line">
                             <h4 class="card-title">Session 0</h4>
-                            <span class="card-tag">Évènement</span>
+                            <span class="card-tag">Événement</span>
                         </div>
-                        <p class="card-subtitle">Rejoignez-nous le 1 septembre à 5h30 en B652.</p>
+                        <p class="card-subtitle">Rejoignez-nous le 1er septembre à 17 h 30 en B652.</p>
                     </div>
                 </a>
             </div>
