--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -50,6 +50,7 @@ $specific_css = ['/css/content-page.css'];
         </div>
     </main>
     <script src="/js/completion-handler.js" defer></script>
+    <script src="/js/copy-btn.js" defer></script>
     <?php require __DIR__ . '/partials/modal.phtml';?>
 </body>
 </html>
