--- a/templates/partials/footer.phtml
+++ b/templates/partials/footer.phtml
@@ -1,22 +1,24 @@
 <footer>
-        <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="./images/logo.webp" alt="Logo du club Krhacken"> </a>
-        <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="./images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
-        <p class="footer-legal">
-Ce site a été conçu et développé par Hugo BRUCHON. Le club Kr[HACK]en est autorisé à l'utiliser, le modifier et à le publier pour un usage non commercial.
+    <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="./images/logo.webp" alt="Logo du club Krhacken"> </a>
+    <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="./images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
+    <p class="footer-legal">
+        Ce site a été conçu et développé par Hugo BRUCHON. Le club Kr[HACK]en est autorisé à l'utiliser, le modifier et à le publier pour un usage non commercial.
+        Les droits d'auteur, de reproduction et de propriété intellectuelle du code appartiennent à Hugo BRUCHON. Toute reproduction, même partielle, sans son accord est interdite.
+        Le contenu créé par d'autres contributeurs et publié sur ce site reste la propriété de leurs auteurs respectifs. 
+    </p>
+    <br>
+    <p class="footer-legal">
+        <a href="/privacy-policy">Politique de confidentialité</a>.
+    </p>
+</footer>
 
-Les droits d'auteur, de reproduction et de propriété intellectuelle du code appartiennent à Hugo BRUCHON. Toute reproduction, même partielle, sans son accord est interdite.
-
-Le contenu créé par d'autres contributeurs et publié sur ce site reste la propriété de leurs auteurs respectifs. 
-        </p>
-    </footer>
-
-    <?php
-    if (isset($scriptsToLoad) && is_array($scriptsToLoad)) {
-        foreach ($scriptsToLoad as $script) {
-            echo '<script src="' . htmlspecialchars($script) . '" defer></script>' . "\n";
-        }
+<?php
+if (isset($scriptsToLoad) && is_array($scriptsToLoad)) {
+    foreach ($scriptsToLoad as $script) {
+        echo '<script src="' . htmlspecialchars($script) . '" defer></script>' . "\n";
     }
-    ?>
+}
+?>
 
 </body>
 </html>
