--- a/templates/privacy-policy.phtml
+++ b/templates/privacy-policy.phtml
@@ -59,7 +59,7 @@ $type = 'page';
             <section class="content-block">
                 <h2><i class="fas fa-share-alt" aria-hidden="true"></i>Partage et Conservation des Données</h2>
                 <p>
-                    Nous nous engageons à ne jamais vendre, louer ou partager vos données personnelles avec des tiers à des fins commerciales. Seuls les membres de l'équipe de développement du club Kr[HACK]en peuvent y avoir accès à des fins de maintenance technique.
+                    Nous nous engageons à ne jamais vendre, louer ou partager vos données personnelles avec des tiers à des fins commerciales ou non. Seuls les membres de l'équipe de développement du club Kr[HACK]en peuvent y avoir accès à des fins de maintenance technique.
                 </p>
                 <p>
                     Vos données personnelles sont conservées tant que votre compte utilisateur est actif sur notre plateforme. Si vous supprimez votre compte, l'ensemble de vos données sera définitivement effacé.
@@ -81,14 +81,14 @@ $type = 'page';
                 <ul>
                     <li><strong>Droit d'accès et de rectification :</strong> Vous pouvez à tout moment consulter et modifier les informations de votre compte (pseudonyme, e-mail, mot de passe) directement depuis votre espace profil ou paramètre.</li>
                     <li><strong>Droit à l'effacement (ou "droit à l'oubli") :</strong> Vous pouvez supprimer votre compte et toutes les données qui y sont associées directement depuis votre espace paramètre. Cette action est irréversible.</li>
-                    <li><strong>Droit d'introduire une réclamation :</strong> Si vous estimez que vos droits ne sont pas respectés, vous pouvez adresser une réclamation à la CNIL (Commission Nationale de l'Informatique et des Libertés).</li>
+                    <li><strong>Droit d'introduire une réclamation :</strong> Si vous estimez que vos droits ne sont pas respectés, vous pouvez adresser une réclamation au club Kr[HACK]en, en abscence de réponse vous pouvez aussi l'adresser à la CNIL (Commission Nationale de l'Informatique et des Libertés).</li>
                 </ul>
             </section>
 
              <section class="content-block">
                 <h2><i class="fas fa-envelope" aria-hidden="true"></i>Contact</h2>
                 <p>
-                    Pour toute question relative à cette politique de confidentialité ou à la gestion de vos données, vous pouvez nous contacter à l'adresse suivante : club.krhacken@esisar.grenoble-inp.fr</strong>
+                    Pour toute question relative à cette politique de confidentialité ou à la gestion de vos données, vous pouvez nous contacter à l'adresse suivante : club.krhacken@gmail.com</strong>. Ou venez nous voir au local du club en A008.
                 </p>
             </section>
         </div>
